demo/envoy/edge-proxy.yml
static_resources:
  listeners:
    - name: envoy_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              access_log:
                - name: envoy.access_loggers.stdout
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
              route_config:
                name: localhost
                virtual_hosts:
                  - name: localhost
                    domains: ["*"]
                    routes:
                      - match:
                          prefix: "/"
                        route:
                          host_rewrite_literal: www.envoyproxy.io
                          cluster: envoy_proxy
                    response_headers_to_add:
                      - header:
                          key: "set-cookie"
                          value: "%REQ(set-cookie)%"
              http_filters:
                - name: envoy.filters.http.ext_authz
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                    http_service:
                      server_uri:
                        uri: localhost:8080
                        cluster: auth_server
                        timeout: 0.25s
                      authorization_request:
                        allowed_headers:
                          patterns:
                            - exact: cookie
                            - exact: x-forwarded-proto
                            - exact: x-forwarded-host
                        headers_to_add:
                          - key: x-forwarded-host
                            value: "%REQ(host)%"
                      authorization_response:
                        allowed_upstream_headers:
                          patterns:
                            - exact: set-cookie
                - name: envoy.filters.http.router
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
            common_tls_context:
              tls_certificates:
                - certificate_chain:
                    filename: "/etc/envoy/tls/proxy.cert.pem"
                  private_key:
                    filename: "/etc/envoy/tls/proxy.key.pem"

  clusters:
    - name: envoy_proxy
      type: logical_dns
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: envoy_proxy
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: www.envoyproxy.io
                      port_value: 443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: www.envoyproxy.io
    - name: auth_server
      connect_timeout: 0.25s
      type: logical_dns
      load_assignment:
        cluster_name: auth_server
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: localhost
                      port_value: 8080
